# native_libraries

./: .gitignore  CMakeLists.txt  LICENSE  README.md  blueprint.md  explicacaoMVP.md  milestones.md
.github/workflows/: build-linux.yml  build-windows.yml
cmake/: CompilerWarnings.cmake  DownloadCLI11.cmake
include/amb/: config.hpp  version.hpp
scripts/: format.sh  format_code.sh  setup.sh  setup_dev.sh
src/: CMakeLists.txt  README.md  main.cpp
src/cli/: CMakeLists.txt  cli_handler.cpp  cli_handler.hpp
src/cli,include/: cli_handler.cpp  cli_handler.hpp
src/cli,include/amb,tests/: config.hpp  version.hpp
src/commands/: CMakeLists.txt  base_command.cpp  base_command.hpp  install_command.cpp  list_command.cpp  remove_command.cpp
src/commands,include/: install_command.cpp
src/core/: CMakeLists.txt  command.cpp  command.hpp  config.cpp  context.cpp  context.hpp  version.cpp
src/core,include/: command.cpp  command.hpp  context.cpp  context.hpp
src/utils/: CMakeLists.txt  error.cpp  error.hpp  filesystem.cpp  filesystem.hpp  logger.cpp  logger.hpp
src/utils,include/: logger.cpp  logger.hpp
tests/: CMakeLists.txt
